--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,6 @@ repositories {
 dependencies {
     //database
     implementation 'mysql:mysql-connector-java:8.0.32'     //mysql
-//    runtimeOnly 'com.h2database:h2'         //h2 database for local
 
     //jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -45,8 +44,18 @@ dependencies {
     //dev-tools
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-    //test
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    //security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    testImplementation 'org.springframework.security:spring-security-test'
+
+    // jwt
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+    //log
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 }
 
 tasks.named('test') {
