--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 # common setting
 spring:
   jpa:
-#    show-sql: true
     hibernate:
+      jdbc:
+        time_zone : Asia/Seoul
 #      ddl-auto: create # 주의 :주석 해재할 경우 데이터 날라감
     properties:
       hibernate:
@@ -30,7 +31,7 @@ spring:
     activate:
       on-profile: local
   datasource:
-    url: jdbc:mysql://gongsamo-dev-rds-2a.cx02ihqfn9bx.ap-northeast-2.rds.amazonaws.com:3306/gongsamo_dev?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://gongsamo-dev-rds-2a.cx02ihqfn9bx.ap-northeast-2.rds.amazonaws.com:3306/gongsamo_dev?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
     username: gonsamo_dev
     password: -dN_p]M*Q\i4
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -57,7 +58,7 @@ spring:
     activate:
       on-profile: dev
   datasource:
-    url: jdbc:mysql://gongsamo-dev-rds-2a.cx02ihqfn9bx.ap-northeast-2.rds.amazonaws.com:3306/gongsamo_dev?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://gongsamo-dev-rds-2a.cx02ihqfn9bx.ap-northeast-2.rds.amazonaws.com:3306/gongsamo_dev?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
     username: gonsamo_dev
     password: -dN_p]M*Q\i4
     driver-class-name: com.mysql.cj.jdbc.Driver
