feat: Apply Swagger 3.0

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,8 @@ logging.level:
   org.hibernate.SQL: debug
   org.hibernate.type: trace
 
+#swagger config
+springdoc.paths-to-match: /**
 
 ---
 # local
