--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,7 +50,9 @@ spring:
   jpa:
     database: mysql
 
-
+  redis:
+    host: localhost
+    port: 6379
 
 ---
 # dev
@@ -77,6 +79,10 @@ spring:
   jpa:
     database: mysql
 #    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+
+  redis:
+    host: localhost
+    port: 6379
 
 ---
 # prod
