feat: 빌드 파이프라인 변경

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,46 @@
 version: "3"
 services:
+  spring:
+    image: openjdk:17-slim
+    container_name: spring
+    ports:
+      - 8080:8080
+    command: "echo stage: $STAGE version: $VERSION && java -jar -Dspring.profiles.active=$STAGE gongsamo-$VERSION.jar"
+    healthcheck:
+      test: ["CMD-SHELL", "curl", "-f", "http://localhost:8080/actuator/health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 40
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.5.3
-    container_name: es
+    container_name: elasticsearch
     environment:
       - cluster.name=gongsamo-cluster-1
+      - node.name=gongsamo-node-1
       - discovery.type=single-node
       - bootstrap.memory_lock=true
       - xpack.security.enabled=false
     ports:
       - 9200:9200
       - 9300:9300
-    command: bash -c "elasticsearch && tail -f /dev/null"
+    command: "bin/elasticsearch"
     networks:
       - elastic
     healthcheck:
       test: ["CMD-SHELL", "curl", "-f", "http://localhost:9200/_cluster/health || exit 1"]
       interval: 30s
       timeout: 5s
-      retries: 120
+      retries: 20
+  redis:
+    image: redis:6.2.6
+    container_name: redis
+    ports:
+      - 6379:6379
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli ping || exit 1"]
+      interval: 30s
+      timeout: 5s
+      retries: 20
 networks:
   elastic:
     external: true
