chore: 컴포즈 설정 복사

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,6 +22,7 @@ phases:
 artifacts:
   files:
     - appspec.yml
+    - docker-compose.yml
     - build/libs/*.jar
     - scripts/**
   discard-paths: yes
