--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     ports:
       - 8080:8080
     command: "java -jar -Dspring.profiles.active=$STAGE gongsamo-$VERSION.jar"
+    volumes:
+      - ./:/
     healthcheck:
       test: ["CMD-SHELL", "curl", "-f", "http://localhost:8080/actuator/health || exit 1"]
       interval: 10s
