--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring:
   elasticsearch:
     rest:
       uri: elasticsearch
+      host: elasticsearch
+      port: 9200
   jpa:
     hibernate:
       jdbc:
@@ -63,6 +65,7 @@ spring:
   elasticsearch:
     rest:
       uri: localhost:9200
+      host: localhost
   jpa:
     database: mysql
 
