--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       - 9200:9200
       - 9300:9300
     command: "bin/elasticsearch"
+    volumes:
+      - es-data:/usr/share/elasticsearch/data
     healthcheck:
       test: ["CMD-SHELL", "curl", "-f", "http://localhost:9200/_cluster/health || exit 1"]
       interval: 30s
@@ -41,6 +43,6 @@ services:
       interval: 30s
       timeout: 5s
       retries: 20
-networks:
-  elastic:
+volumes:
+  es-data:
     external: true
